# lux

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  README.zh-CN.md  capabilities.out.lua
compiler/: Cargo.toml  README.md
compiler/src/: analysis.rs  compile_time.rs  format.rs  lib.rs  lint.rs  lsp.rs  main.rs  package_manager.rs  packages.rs  part_order.rs  pipeline.rs  runtime.rs  runtime_map.rs  test_support.rs  toolchain.rs
compiler/src/ast/: nodes.rs
compiler/src/codegen/: lua.rs  lua_budget.rs  mod.rs
compiler/src/codegen/lua/: analysis.rs  match_analysis.rs  scope.rs  syntax.rs  tests.rs
compiler/src/compile_time/: tests.rs
compiler/src/diag/: diagnostic.rs  emitter.rs  mod.rs
compiler/src/gmod/: backend.rs
compiler/src/host/: mod.rs
compiler/src/ir/: core.rs
compiler/src/lex/: lexer.rs  mod.rs  token.rs
compiler/src/lower/: ast_to_ir.rs  mod.rs
compiler/src/lsp/: color.rs  commands.rs  completion.rs  cursor.rs  diagnostics.rs  gmod_api.rs  lexical_completion.rs  protocol.rs  semantic.rs  tests.rs  text_sync.rs  workspace.rs
compiler/src/macro_expansion/: mod.rs
compiler/src/module/: mod.rs
compiler/src/parse/: mod.rs  parser.rs
compiler/src/parse/parser/: tests.rs
compiler/src/project/: manifest.rs  mod.rs  tests.rs
compiler/src/resolve/: mod.rs  resolver.rs
compiler/src/resolve/resolver/: tests.rs
compiler/src/source/: file.rs  mod.rs  span.rs
compiler/src/sourcemap/: comments.rs  map.rs  mod.rs  writer.rs
docs/: ARCHITECTURE.md  AST.md  COMPILER_IMPLEMENTATION.md  GLUA_BACKEND.md  GMOD_BACKEND.md  PRECEDENCE.md  (+5 more)
(+13 files in other folders)
