[package]
name = "luxc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimeWatcher/lux"

[lib]
path = "src/lib.rs"

[dependencies]
gmod-api-db = { path = "../lsp/crates/gmod-api-db" }
gmod-api-update = { path = "../lsp/tools/gmod-api-update" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
semver = "1"
sha2 = "0.10"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
